@@ -168,6 +168,9 @@
                         --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens java.management/sun.management=ALL-UNNAMED
                         --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
                     </jvmArguments>
                 </configuration>
             </plugin>
@@ -180,6 +183,11 @@
                     <argLine>
                         --add-opens java.base/java.nio=ALL-UNNAMED
                         --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.management/sun.management=ALL-UNNAMED
+                        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
                         -XX:+EnableDynamicAgentLoading 
                         -Dnet.bytebuddy.experimental=true
                     </argLine>
